# ai-dev-companion

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CREDITS.md  README.md  Taskfile.yml  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_create_reviews.py  0002_corpus_columns.py
apps/api/src/adc_api/: agent_prompts.py  agents.py  aggregator.py  corpus.py  events.py  graph.py  jobs.py  main.py  models.py  providers.py  queue.py  repository.py  review_service.py  runtime_config.py  schemas.py  selection.py  settings.py  worker.py
apps/api/src/adc_api/db/: engine.py  models.py
apps/api/src/adc_api/scanners/: __init__.py  bandit.py  docker_runner.py  sarif.py  semgrep.py
apps/api/tests/: conftest.py  test_agents.py  test_aggregator.py  test_api.py  test_corpus.py  test_db_models.py  test_events.py  test_graph.py  test_integration.py  test_jobs.py  test_providers.py  test_queue.py  test_repository.py  test_review_service.py  test_sarif.py  test_scanners.py  test_schemas.py  test_selection.py  test_settings.py  test_worker.py
apps/web/: .eslintrc.cjs  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  (+2 more)
demo/: CommandInjection.java  README.md  eval_input.js  path_traversal.go  secrets_weak_hash.ts  sql_injection.py  unsafe_backup.sh  unwrap_overflow.rs
docs/: tech-debt.md
docs/test-cases/: inc1-samples.md
skills/: adding-a-language.md  adding-a-model-provider.md
(+35 files in other folders)
