[project]
name = "adc-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "adc-core",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sse-starlette>=2.1",
  "pydantic-settings>=2.4",
  "instructor>=1.5",
  "openai>=1.40",
]

[tool.uv.sources]
adc-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adc_api"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.27"]
